--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
+
+.bg-gradient-dark {
+  background-image: linear-gradient(90deg, #6271eb, #6170eb54);
+}
+
+.bg-gradient-light {
+  background-image: linear-gradient(90deg, #6271eb, #6170eb26); /* Adjusted alpha value */
+}
+
